# alamo

./: .alamo  .build.amrex.sh  .build.sh  .build2d.sh  .build3d.sh  .clang-format  .editorconfig  .gitignore  .gitignore_BACKUP_10705  .gitignore_REMOTE_10705  .install.amrex.sh  .readthedocs.yml  .test.sh  .test2d.sh  .travis.yml  1s_propane.yaml  1simple  2d.xyr  2d.xyzr  2s_methane.yaml  AbsSin.txt  Backtrace.rg_0_rl_0  Backtrace.rg_1_rl_1  Backtrace.rg_2_rl_2  Backtrace.rg_3_rl_3  Beta Relationship.ods  CMakeLists.txt  Doxyfile  INSTALL-GPU  Inputs.rst  Makefile  Makefile.conf  MyAmr.H  MyAmr.cpp  NACA5605.xy  NACA8420.xy  ParticleMatrix  README.rst  Readme.md  Readme.rst  (+297 more)
.circleci/: config.yml
.simba/: config  data.ini  file1  file2  getHash.py  parseOutputDir.py
AmrAdv/: AmrAdv.H  AmrAdv.cpp  AmrAdvBC.H  AmrAdvError.cpp  AmrAdvEvolve.cpp  AmrAdvInit.cpp  AmrAdv_F.H  AmrAdv_F.cpp
OperatorCell/: Operator.H  Operator.cpp
PFAmr/: PFAmr.H  PFAmr.cpp  PFAmr.cpp.orig  PFAmrBC.H  PFAmrError.cpp  PFAmrEvolve.cpp  PFAmrEvolve.cpp.orig  PFAmrIO.cpp  PFAmrInit.cpp
PFBoundary/: PFBoundary.H  PFBoundarySin.H
PFFem/: AMReX_MLPoisson.cpp  PFFem.H  PFFem.cpp
PFFlame/: PFFlameBC.H
analysis/: README.md  analysis.py  contours_frequency.py  contours_thesis.py  generate_image.py  multiplot.py  package_phase3_nova_bundle.sh  plot_histograms.py  read_slope.py
benchmark/: 3d_cone_grain_test.sh  ALPHA1_BASELINE.md  G0_BASELINE_OF_RECORD.md  GPU_BRANCH_GUIDE.md  GPU_ROADMAP_V2.md  GPU_TEST_PERF_TRACKING.md  GPU_TEST_SUITE_FIXES.md  LOCAL_A100_SPOOFING.md  PERF_TRACKING.md  PHASE1_ELASTIC_DISPOSITION.md  PHASE3_3D_READINESS.md  PHASE3_NOVA_TESTING_PROGRESS.md  PHASE3_R3_crossover.md  PHASE4_R4_dispatch.md  PHASE5_BRANCH_DONE.md  PHASE_A_FINDINGS.md  README.md  SUCCESS_BOOK.md  async_profile.inputs  benchmark_gpu_cpu.sh  build_alamo_nova.sh  build_alamo_nova_3d.sh  collect_phaseA_to_local.sh  compare_tinyprofiler.py  elixir_race_audit.md  g0_ncu_capture.sh  local_a100_gate.sh  nova_flame_cpu.slurm  nova_flame_cpu_3d.slurm  nova_flame_cpu_3d_a2.slurm  nova_flame_gpu.slurm  nova_flame_gpu_3d.slurm  nova_flame_gpu_3d_a2.slurm  nova_flame_gpu_3d_diag.slurm  nova_flame_gpu_3d_multi.slurm  phase3_memory_budget.py  phase3_nova_diag.sh  phase3_nova_oneshot.sh  phase3_scaling_sweep.sh  phase_a2_sweep.sh  (+7 more)
cov/: coverage_2d.info  coverage_3d.info  coverage_merged.info  index-sort-f.html  index-sort-l.html  index.html
doc/: AbsSin_8H_source.html  BC_2Constant_8H_source.html  BC_2Elastic_2Elastic_8H_source.html  BC_8H_source.html  Color_8H_source.html  CubicRotation_8H_source.html  Cylinder_8H_source.html  Degradation_8H_source.html  Eigen__Amrex_8H_source.html  Eigenstrain_2Sphere_8H_source.html  Element_8H_source.html  FileNameParse_8H_source.html  (+220 more)
(+38906 files in other folders)
